--- a/Models/Diffusion/2024.12.11_LatentSpeech.md
+++ b/Models/Diffusion/2024.12.11_LatentSpeech.md
@@ -108,6 +108,77 @@ These durations adjust the length of each acoustic embedding to the adaptive emb
 The adaptive embeddings~\(H_L\) are then passed through the embedding generator to generate the TTS embedding~\(H_{TTS}\).
 This is followed by a linear layer to broadcast~\(H_{TTS}\) to the dimensions of the latent embedding~\(Z\).
 
+### C·Latent Diffusion: 隐变量扩散
+
+Diffusion model is a probabilistic generative model that learns to produce data that match latent embedding distribution~$p(Z)$, by denoising a normally distributed variable through a reverse Markov Chain of length~$T$.
+We define $q(Z_0)$ as the data distribution of the latent embedding $Z \in \mathbb{R}^{N \times L}$.
+Let $Z_t \in \mathbb{R}^{N \times L}$ for $t = 0, 1, \ldots, T$ represent the forward diffusion process:
+
+$$
+    q(Z_{1:T} | Z_0) = \prod_{t=1}^{T} q(Z_t | Z_{t-1})
+$$
+
+where Gaussian noise~$\mathcal{N}(\cdot)$ is gradually added to the Markov chain from $Z_0$ to $Z_T$ until $q(Z_T) \sim \mathcal{N}(0,I)$.
+
+$$
+    q(Z_t | Z_{t-1}) = \mathcal{N}(Z_t;\sqrt{\alpha_t}Z_{t-1}, (1-\alpha_t)\mathbf{I})
+$$
+
+Here, $\alpha_t$ refers to the scaling factor that controls the amount of noise added at diffusion step $t$.
+Then, we apply a conditional denoiser~$P_\theta(\cdot)$ parameterized by~$\theta$ to reverse the diffusion process and gradually reconstruct the original latent embeddings~$Z_0$ from the noisy latent embeddings~$Z_T$, as illustrated in Figure~\ref{fig:conditional_denoiser}.
+
+$$
+    p_{\theta}(Z_0 | Z_{T:1}) = \prod_{t=1}^{T} p_\theta(Z_{t-1}|Z_{t},t_{embed},H_{TTS})
+$$
+
+Specifically, we apply a 128-dimensional positional encoding~\cite{vaswani2017attention} at diffusion step~$t$ to represent the diffusion-step embedding~$t_{embed}$.
+
+$t_{embed}$ is broadcasted to the $L$-dimension, $t_{embed} \in \mathbb{R}^{L}$, to match the temporal resolution of latent embedding~$Z$.
+The TTS embedding~$H_{TTS}$, obtained in Section~\ref{sec:tts_encode}, serves as a conditional input for the denoiser to guide the reverse diffusion process.
+The dimension of $H_{TTS}$ is as same as the latent embedding dimension~$Z \in \mathbb{R}^{N \times L}$.
+The denoiser is constructed using several layers of residual blocks built with bidirectional dilated convolution kernels, similar to those applied in diffusion-based neural vocoders \cite{kong2020diffwave}.
+More details on the architecture of the denoiser and the residual blocks can be found in Figures~\ref{fig:conditional_denoiser} and \ref{fig:residual_block} respectively.
+
+#### Training: 训练
+
+In the training stage, we define the transition probability $p_\theta(Z_{t-1}|Z_{t})$ is parameterized as
+
+$$
+\mathcal{N}(Z_{t-1};\mu_{\theta}(Z_{t},t), \sigma_{\theta}(Z_{t},t)^2I)
+$$
+
+$\mu_\theta$ is the mean embedding and $\sigma_\theta$ is a real number as the standard deviation.
+We follow a closed-form diffusion model calculation method proposed in \cite{ho2020denoising} to accelerate computation and avoid Monte Carlo estimates. Specifically, we first define the variance schedule~${\beta}_{t=1}^{T}$:
+
+$$
+\begin{aligned}
+    \alpha_t = 1 - \beta_t, \quad \hat{\alpha}_{t} = \prod_{s=1}^{t}\alpha_s, \quad \\
+    \hat{\beta_{t}} = \frac{1-\hat{\alpha}_{t-1}}{1-\hat{\alpha}_{t}}\beta_{t}, \quad t > 1, \quad \hat{\beta_{1}} = \beta_1
+\end{aligned}
+$$
+
+Then, the parameterizations of $\mu_\theta$ and $\sigma_\theta$ are defined by:
+
+$$
+    \mu_{\theta}(\cdot) = \frac{1}{\sqrt{\alpha_t}}(Z_t - \frac{\beta_t}{\sqrt{1-\hat{\alpha}}}f_{\theta}(Z_{t},t,H_{TTS})),\, \sigma_{\theta}(\cdot) = \sqrt{\beta_{t}}
+$$
+
+Here, $f_{\theta}(Z_{t},t,H_{TTS})$ is our proposed conditional denoiser r, which takes the diffusion step embedding~$t_{embed}$ and TTS embedding~$H_{TTS}$ as conditional inputs to predict the noise $\epsilon_t$ added in the forward diffusion process at step $t$. The training objective is to optimize the parameters to reduce the following loss function:
+
+$$
+    L = \mathbb{E}_{Z_0,\epsilon,t,H_{TTS}} \left\| \epsilon - f_\theta(Z_t, t, H_{TTS}) \right\|^2
+$$
+
+#### Inference: 推理
+
+In the inference stage, we sample $Z_T \sim \mathcal{N}(0,I)$. We use the trained denoiser~$f_{\theta}({\cdot})$ predicts the noise~$\epsilon_{t}$ added to the latent embeddings at $t$ for $t=T,T-1,\dots,1$. This noise is iteratively subtracted from~$Z_T$ until the latent embedding~$Z_0$ is reconstructed.
+$$
+    \epsilon_{t} = f_{\theta}(Z_{t-1},t_{embed},H_{TTS})
+$$
+
+### D·Vocoder: 声码器
+
+The trained decoder $\mathbf{D}(\cdot)$ described in Section~\ref{sec:lfe} serves as a vocoder to reconstruct speech using the latent embeddings produced by the diffusion denoising process outlined in Section~\ref{sec:ld}. Specifically, the denoised latent embeddings \(Z \in \mathbb{R}^{N \times T}\) are input into the decoder $\mathbf{D}(\cdot)$. The decoder converts these features back into multi-band speech, which is then processed using the inverse PQMF function, $\mathbf{PQMF}^{-1}(\cdot)$. This function combines the sub-band speech signals back into a single speech waveform to generate the final reconstructed speech signal \(A'\).
 
 ## 4·Experiments: 实验
 
