--- a/Models/Diffusion/2024.12.11_LatentSpeech.md
+++ b/Models/Diffusion/2024.12.11_LatentSpeech.md
@@ -182,6 +182,30 @@ The trained decoder $\mathbf{D}(\cdot)$ described in Section~\ref{sec:lfe} serve
 
 ## 4·Experiments: 实验
 
+### Dataset: 数据集
+
+In this study, we evaluate our method using a Chinese speech dataset, which presents unique challenges due to its complex pronunciation and tonal variations compared to other languages, such as English.
+We use the Baker dataset~\cite{BakerDataset2020}, which contains approximately 12 hours of speech recorded using professional instruments at a frequency of 48kHz.
+The dataset consists of 10k speech samples from a female Mandarin speaker.
+
+### Experimental Setups: 实验设置
+
+The experiment is conducted using an NVIDIA RTX A5000 with a PyTorch implementation.
+All experimental settings closely follow those proposed in StyleSpeech~\cite{lou2024stylespeechparameterefficientfinetuning}.
+Specifically, we use 4k sentences for training and 1k sentences for testing.
+The batch size is set to 64, and the model is trained for 300 epochs.
+The number of diffusion steps, $T$, is set to 50.
+To further validate our method, we also train our model on a larger dataset consisting of 9k training sentences and 1k testing sentences.
+An ablation study on the effect of the duration target $l$ was conducted to evaluate the impact of the duration adaptor on the output speech.
+In this study, phoneme samples adapted with the ground truth duration target are labelled as $(w/l)$, while those adapted using the adaptor-predicted duration are labelled as $(w/o l)$.
+Our source code will be released upon acceptance.
+
+### Metrics: 指标
+
+We employ Word Error Rate~(WER), Mel Cepstral Distortion~(MCD)~\cite{kubichek1993mel}, and Perceptual Evaluation of Speech Quality~(PESQ)~\cite{rix2001perceptual}, to evaluate model's performance.
+For WER, we further evaluate the Phoneme-level WER (WER-P) and Style-level WER (WER-S).
+We assess the accuracy of synthesized speech using WER by first generating speech with a TTS system and then transcribing it through OpenAI's Whisper API~\cite{radford2023robust}.
+
 ## 5·Results: 结果
 
 ## 6·Conclusions: 结论
