--- a/Models/Diffusion/2024.12.11_LatentSpeech.md
+++ b/Models/Diffusion/2024.12.11_LatentSpeech.md
@@ -254,3 +254,7 @@ Interestingly, LatentSpeech (w/o l) achieves the highest PESQ score of 1.063 wit
 This indicates that while duration labels contribute to a lower MCD, they may not always improve perceptual quality, as seen in certain configurations where PESQ scores are higher without them.
 
 ## 6·Conclusions: 结论
+
+In conclusion, we propose LatentSpeech, a new TTS framework that uses latent embeddings that reduce intermediate representation dimension to 5\% of mainstream approaches.
+By incorporating a latent diffusion model, LatentSpeech refines speech in latent space for more accurate and natural output.
+Extensive experiments demonstrate that LatentSpeech achieves a 25\% improvement in WER and a 24\% improvement in MCD compared to existing models, with further improvements to 49.5\% and 26\% when trained with more data.
