--- a/Models/Vocoder/2020.10.12_HiFi-GAN.md
+++ b/Models/Vocoder/2020.10.12_HiFi-GAN.md
@@ -1,40 +1,28 @@
-# HiFi-GAN: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis
+# HiFi-GAN:
 
 <details>
 <summary>基本信息</summary>
 
-- 标题: HiFi-GAN: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis
+- 标题: "HiFi-GAN: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis"
 - 作者:
-  - [Jungil Kong](../../Authors/Jungil_Kong.md)
-  - [Jaehyeon Kim](../../Authors/Jaehyeon_Kim.md)
-  - [Jaekyoung Bae](../../Authors/Jaekyoung_Bae.md)
-- 机构:
-  - [Kakao Enterprise](../../Institutions/KOR-Kakao_Enterprise.md)
-- 时间:
-  - 预印时间: 2020.10.12 ArXiv v1
-  - 预印时间: 2020.10.23 ArXiv v2
-  - 更新笔记: 2024.06.15
-- 发表:
-  - [NeurIPS 2020](../../Publications/NeurIPS.md)
+  - 01 Jungil Kong
+  - 02 Jaehyeon Kim
+  - 03 Jaekyoung Bae
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2010.05646)
-  - [Demo](https://jik876.github.io/hifi-gan-demo/)
-  - [DOI](https://proceedings.neurips.cc/paper_files/paper/2020/hash/c5d736809766d46260d816d8dbc9eb44-Abstract.html)
+  - [Publication](https://dl.acm.org/doi/abs/10.5555/3495724.3497152)
   - [Github](https://github.com/jik876/hifi-gan)
-- 标签:
-  - [声码器](../../Tags/Vocoder.md)
-  - [生成对抗网络](../../Tags/Model_GAN.md)
-  - [对抗学习](../../Tags/Learning_Adversarial.md)
-- 页数: 14
-- 引用: ?
-- 被引: 1444
+  - [Demo](https://jik876.github.io/hifi-gan-demo/)
+- 文件:
+  - [ArXiv](_PDF/2010.05646v2__HiFi-GAN__Generative_Adversarial_Networks_for_Efficient_&_High_Fidelity_Speech_Synthesis.pdf)
+  - [Publication](_PDF/2010.05646p0__HiFi-GAN__NeurIPS2020.pdf)
 
 </details>
 
-## Abstract·摘要
+## Abstract: 摘要
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 Several recent work on speech synthesis have employed [Generative Adversarial Networks (GANs)](../_Basis/2014.06.10_GAN.md) to produce raw waveforms.
 Although such methods improve the sampling efficiency and memory usage, their sample quality has not yet reached that of autoregressive and flow-based generative models.
@@ -45,6 +33,7 @@ We further show the generality of ***HiFi-GAN*** to the mel-spectrogram inversio
 Finally, a small footprint version of ***HiFi-GAN*** generates samples 13.4 times faster than real-time on CPU with comparable quality to an autoregressive counterpart.
 
 </details>
+<br>
 
 语音合成领域的几项近期工作都采用了生成对抗网络来生成原始波形.
 尽管这种方法能够提升采样效率和内存利用, 它们的样本质量还没有达到自回归和基于流模型的生成模型的效果.
@@ -54,10 +43,10 @@ Finally, a small footprint version of ***HiFi-GAN*** generates samples 13.4 time
 我们进一步展示了 ***HiFi-GAN*** 的泛化性, 即对未见过的发言人进行梅尔频谱的逆向工程, 以及端到端的语音合成.
 最后, 我们提出了一种体积小的 ***HiFi-GAN*** 版本, 它在 CPU 上以与自回归模型相当的质量生成音频, 且生成速度比实时速度快 13.4 倍.
 
-## 1.Introduction·引言
+## 1·Introduction: 引言
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 Voice is one of the most frequent and naturally used communication interfaces for humans.
 With recent developments in technology, voice is being used as a main interface in artificial intelligence (AI) voice assistant services such as Amazon Alexa, and it is also widely used in automobiles, smart homes and so forth.
@@ -65,21 +54,21 @@ Accordingly, with the increase in demand for people to converse with machines, t
 
 Recently, with the development of neural networks, speech synthesis technology has made a rapid progress.
 Most neural speech synthesis models use a two-stage pipeline:
-1. predicting a low resolution intermediate representation such as mel-spectrograms (Shen et al., 2018, Ping et al., 2017, Li et al., 2019) or linguistic features ([Oord et al.(WaveNet·2016)](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md)) from text,
-2. synthesizing raw waveform audio from the intermediate representation ([Oord et al.(WaveNet·2016)](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md), Prenger et al., 2019, Kumar et al., 2019).
+1. predicting a low resolution intermediate representation such as mel-spectrograms (Shen et al., 2018, Ping et al., 2017, Li et al., 2019) or linguistic features ([Oord et al.(WaveNet·2016)](../Vocoder/2016.09.12_WaveNet.md)) from text,
+2. synthesizing raw waveform audio from the intermediate representation ([Oord et al.(WaveNet·2016)](../Vocoder/2016.09.12_WaveNet.md), Prenger et al., 2019, Kumar et al., 2019).
 
 The first stage is to model low-level representations of human speech from text, whereas the second stage model synthesizes raw waveforms with up to 24,000 samples per second and up to 16 bit fidelity.
 In this work, we focus on designing a second stage model that efficiently synthesizes high fidelity waveforms from mel-spectrograms.
 
 Various work have been conducted to improve the audio synthesis quality and efficiency of second stage models.
-[WaveNet (2016)](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md) is an autoregressive (AR) convolutional neural network that demonstrates the ability of neural network based methods to surpass conventional methods in quality..
+[WaveNet (2016)](../Vocoder/2016.09.12_WaveNet.md) is an autoregressive (AR) convolutional neural network that demonstrates the ability of neural network based methods to surpass conventional methods in quality..
 
 However, because of the AR structure, WaveNet generates one sample at each forward operation; it is prohibitively slow in synthesizing high temporal resolution audio.
 Flow-based generative models are proposed to address this problem.
 Because of their ability to model raw waveforms by transforming noise sequences of the same size in parallel, flow-based generative models fully utilize modern parallel computing processors to speed up sampling.
-[Parallel WaveNet (2019)](2019.10.25_Parallel_WaveGAN.md) is an inverse autoregressive flow (IAF) that is trained to minimize its Kullback-Leibler divergence from a pre-trained WaveNet called a teacher.
+[Parallel WaveNet (2019)](../Vocoder/2019.10.25_Parallel_WaveGAN.md) is an inverse autoregressive flow (IAF) that is trained to minimize its Kullback-Leibler divergence from a pre-trained WaveNet called a teacher.
 Compared to the teacher model, it improves the synthesis speed to 1,000 times or more, without quality degradation.
-[WaveGlow (2018)](2018.10.31_WaveGlow.md) eliminates the need for distilling a teacher model, and simplifies the learning process through maximum likelihood estimation by employing efficient bijective flows based on Glow (Kingma and Dhariwal, 2018).
+[WaveGlow (2018)](../Vocoder/2018.10.31_WaveGlow.md) eliminates the need for distilling a teacher model, and simplifies the learning process through maximum likelihood estimation by employing efficient bijective flows based on Glow (Kingma and Dhariwal, 2018).
 It also produces high-quality audio compared to WaveNet.
 However, it requires many parameters for its deep architecture with over 90 layers.
 
@@ -87,7 +76,7 @@ However, it requires many parameters for its deep architecture with over 90 laye
 Kumar et al. (2019) proposed a multi-scale architecture for discriminators operating on multiple scales of raw waveforms.
 With sophisticated architectural consideration, the MelGAN generator is compact enough to enable real-time synthesis on CPU.
 Yamamoto et al. (2020) proposed multi-resolution STFT loss function to improve and stabilize GAN training and achieved better parameter efficiency and less training time than an IAF model, ClariNet (Ping et al., 2018).
-Instead of mel-spectrograms, [GAN-TTS (2019)](2019.09.25_GAN-TTS.md) successfully generates high quality raw audio waveforms from linguistic features through multiple discriminators operating on different window sizes.
+Instead of mel-spectrograms, [GAN-TTS (2019)](../Vocoder/2019.09.25_GAN-TTS.md) successfully generates high quality raw audio waveforms from linguistic features through multiple discriminators operating on different window sizes.
 The model also shows fewer FLOPs compared to Parallel WaveNet.
 Despite the advantages, there is still a gap in sample quality between the GAN models and AR or flow-based models.
 
@@ -105,8 +94,11 @@ Finally, the tiny footprint version of ***HiFi-GAN*** requires only 0.92M parame
 Our audio samples are available on the demo web-site, and we provide the implementation as open source for reproducibility and future work.
 
 </details>
+<br>
 
-## 2·Methodology·方法论
+## 2·Related Works: 相关工作
+
+## 3·Methodology: 方法
 
 ### 2.1·Overview·概览
 
@@ -117,6 +109,7 @@ Our audio samples are available on the demo web-site, and we provide the impleme
 The generator and discriminators are trained adversarially, along with two additional losses for improving training stability and model performance.
 
 </details>
+<br>
 
 ***HiFi-GAN*** 由一个生成器和两个判别器 (多尺度判别器, 多周期判别器) 组成.
 生成器和判别器以对抗的方式训练, 并在训练过程中引入额外两种的损失以提高模型性能和稳定性.
@@ -124,15 +117,16 @@ The generator and discriminators are trained adversarially, along with two addit
 ### 2.2·Generator·生成器
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 The generator is a fully convolutional neural network.
 It uses a mel-spectrogram as input and upsamples it through transposed convolutions until the length of the output sequence matches the temporal resolution of raw waveforms.
 Every transposed convolution is followed by a multi-receptive field fusion (MRF) module, which we describe in the next paragraph.
 Fig.01 shows the architecture of the generator.
-As in previous work (Mathieu et al., 2015, Isola et al., 2017, [MelGAN (2019)](2019.10.08_MelGAN.md)), noise is not given to the generator as an additional input.
+As in previous work (Mathieu et al., 2015, Isola et al., 2017, [MelGAN (2019)](../Vocoder/2019.10.08_MelGAN.md)), noise is not given to the generator as an additional input.
 
 </details>
+<br>
 
 生成器采用全卷积神经网络.
 它接收梅尔频谱作为输入, 通过转置卷积上采样直到输出序列的长度与原始波形的时间分辨率相匹配.
@@ -209,11 +203,12 @@ class Generator(torch.nn.Module):
 ```
 
 </details>
+<br>
 
 #### Multi-Receptive Field Fusion (MRF) Fusion·多感受野融合
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 We design the multi-receptive field fusion (MRF) module for our generator, which observes patterns of various lengths in parallel.
 Specifically, MRF module returns the sum of outputs from multiple residual blocks.
@@ -223,6 +218,7 @@ We left some adjustable parameters in the generator;
 the hidden dimension $h_{u}$, kernel sizes $k_{u}$ of the transposed convolutions, kernel sizes $k_{r}$, and dilation rates $D_{r}$ of MRF modules can be regulated to match one’s own requirement in a trade-off between synthesis efficiency and sample quality.
 
 </details>
+<br>
 
 我们为生成器设计了多感受野融合 (Multi-Receptive Field Fusion, MRF) 模块, 它能够并行地观察不同长度的模式.
 具体来说, MRF 模块返回多个残差块的输出之和.
@@ -233,27 +229,29 @@ the hidden dimension $h_{u}$, kernel sizes $k_{u}$ of the transposed convolution
 ### 2.3·Discriminator·判别器
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 Identifying long-term dependencies is the key for modeling realistic speech audio.
 For example, a phoneme duration can be longer than 100 ms, resulting in high correlation between more than 2,200 adjacent samples in the raw waveform.
 This problem has been addressed in the previous work (Donahue et al., 2018) by increasing receptive fields of the generator and discriminator.
 
 </details>
+<br>
 
 识别长期依赖性是建模真实语音音频的关键所在.
 例如, 一个音素持续时间可以超过 100 毫秒, 这使得原始波形中超过 2200 个相邻样本点间具有高度相关性.
 这一问题在之前的工作 "Adversarial Audio Synthesis" (2018) 中通过增加生成器和判别器的感受野得到了解决.
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 We focus on another crucial problem that has yet been resolved; as speech audio consists of sinusoidal signals with various periods, the diverse periodic patterns underlying in the audio data need to be identified.
 To this end, we propose the multi-period discriminator (MPD) consisting of several sub-discriminators each handling a portion of periodic signals of input audio.
-Additionally, to capture consecutive patterns and long-term dependencies, we use the **multi-scale discriminator (MSD)** proposed in [MelGAN (2019)](2019.10.08_MelGAN.md), which consecutively evaluates audio samples at different levels.
+Additionally, to capture consecutive patterns and long-term dependencies, we use the **multi-scale discriminator (MSD)** proposed in [MelGAN (2019)](../Vocoder/2019.10.08_MelGAN.md), which consecutively evaluates audio samples at different levels.
 We conducted simple experiments to show the ability of MPD and MSD to capture periodic patterns, and the results can be found in Appendix B.
 
 </details>
+<br>
 
 我们主要关注另一个尚未解决的关键问题.
 由于语音音频由具有各种周期的正弦信号组成, 因此需要识别音频数据中存在的各种不同周期模式.
@@ -264,7 +262,7 @@ We conducted simple experiments to show the ability of MPD and MSD to capture pe
 #### Multi-Period Discriminator·多周期判别器
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 MPD is a mixture of sub-discriminators, each of which only accepts equally spaced samples of an input audio; the space is given as period p.
 The sub-discriminators are designed to capture different implicit structures from each other by looking at different parts of an input audio.
@@ -276,6 +274,7 @@ Subsequently, weight normalization (Salimans and Kingma, 2016) is applied to MPD
 By reshaping the input audio into 2D data instead of sampling periodic signals of audio, gradients from MPD can be delivered to all time steps of the input audio.
 
 </details>
+<br>
 
 多周期判别器是多个子判别器的混合, 每个子判别器仅接受输入音频中等间隔的样本, 间隔由周期 $p$ 给出.
 这些子判别器被设计成通过关注输入音频的不同部分以捕捉彼此之间不同的隐式结构.
@@ -354,27 +353,29 @@ class MultiPeriodDiscriminator(torch.nn.Module):
 ```
 
 </details>
+<br>
 
 #### Multi-Scale Discriminator·多尺度判别器
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 Because each sub-discriminator in MPD only accepts disjoint samples, we add MSD to consecutively evaluate the audio sequence.
-The architecture of MSD is drawn from that of [MelGAN (2019)](2019.10.08_MelGAN.md).
+The architecture of MSD is drawn from that of [MelGAN (2019)](../Vocoder/2019.10.08_MelGAN.md).
 MSD is a mixture of three sub-discriminators operating on different input scales: raw audio,×2 average-pooled audio, and ×4 average-pooled audio, as shown in Fig.02a.
 Each of the sub-discriminators in MSD is a stack of strided and grouped convolutional layers with leaky ReLU activation.
 The discriminator size is increased by reducing stride and adding more layers.
 Weight normalization is applied except for the first sub-discriminator, which operates on raw audio.
 Instead, spectral normalization (Miyato et al., 2018) is applied and stabilizes training as it reported.
 Note that MPD operates on disjoint samples of raw waveforms, whereas MSD operates on smoothed waveforms.
-For previous work using multi-discriminator architecture such as MPD and MSD, [Binkowski et al. (GAN-TTS·2019)](2019.09.25_GAN-TTS.md)’s work can also be referred.
+For previous work using multi-discriminator architecture such as MPD and MSD, [Binkowski et al. (GAN-TTS·2019)](../Vocoder/2019.09.25_GAN-TTS.md)’s work can also be referred.
 The discriminator architecture proposed in the work has resemblance to MPD and MSD in that it is a mixture of discriminators, but MPD and MSD are Markovian window-based fully unconditional discriminator, whereas it averages the output and has conditional discriminators.
-Also, the resemblance between MPD and RWD ([Binkowski et al.(GAN-TTS·2019)](2019.09.25_GAN-TTS.md)) can be considered in the part of reshaping input audio, but MPD uses periods set to prime numbers to discriminate data of as many periods as possible, whereas RWD uses reshape factors of overlapped periods and does not handle each channel of the reshaped data separately, which are different from what MPD is aimed for.
+Also, the resemblance between MPD and RWD ([Binkowski et al.(GAN-TTS·2019)](../Vocoder/2019.09.25_GAN-TTS.md)) can be considered in the part of reshaping input audio, but MPD uses periods set to prime numbers to discriminate data of as many periods as possible, whereas RWD uses reshape factors of overlapped periods and does not handle each channel of the reshaped data separately, which are different from what MPD is aimed for.
 A variation of RWD can perform a similar operation to MPD, but it is also not the same as MPD in terms of parameter sharing and strided convolution to adjacent signals.
 More details of the architectural difference can be found in Appendix C.
 
 </details>
+<br>
 
 由于 MPD 中每个子判别器仅接受不相交的样本, 因此我们添加 MSD 以连续地评估音频序列.
 MSD 的架构来自 MelGAN.
@@ -456,13 +457,14 @@ class MultiScaleDiscriminator(torch.nn.Module):
 ```
 
 </details>
+<br>
 
 ### 2.4.Training Loss Terms·训练损失项
 
 ### GAN Loss·GAN 损失
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 For brevity, we describe our discriminators, MSD and MPD, as one discriminator throughout Section 2.4.
 For the generator and discriminator, the training objectives follow LS GAN (Mao et al., 2017), which replace the binary cross-entropy terms of the [original GAN](../_Basis/2014.06.10_GAN.md) objectives with least squares loss functions for non-vanishing gradient flows.
@@ -481,6 +483,7 @@ $$
 where $x$ denotes the ground truth audio and $s$ denotes the input condition, the mel-spectrogram of the ground truth audio.
 
 </details>
+<br>
 
 为了简介起见, 我们在整个 2.4 节将 MSD 和 MPD 视为一个判别器.
 对于生成器和判别器, 训练目标遵循 LS GAN, 它将原始 GAN 目标函数的二元交叉熵项替换为最小二乘损失函数, 以保持梯度流不消失.
@@ -502,7 +505,7 @@ $$
 ### Mel-Spectrogram Loss·梅尔频谱损失
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 In addition to the GAN objective, we add a mel-spectrogram loss to improve the training efficiency of the generator and the fidelity of the generated audio.
 Referring to previous work (Isola et al., 2017), applying a reconstruction loss to GAN model helps to generate realistic results, and in Yamamoto et al. (2020)’s work, time-frequency distribution is effectively captured by jointly optimizing multi-resolution spectrogram and adversarial loss functions.
@@ -518,6 +521,7 @@ where $\phi$ is the function that transforms a waveform into the corresponding m
 The mel-spectrogram loss helps the generator to synthesize a realistic waveform corresponding to an input condition, and also stabilizes the adversarial training process from the early stages.
 
 </details>
+<br>
 
 除了 GAN 目标函数, 我们添加了梅尔频谱损失以提升生成器的训练效率和生成音频的保真度.
 据先前工作, 给 GAN 模型应用重构损失有助于生成真实结果, 且在 Yamamoto 的工作中, 通过联合优化多分辨率频谱和对抗损失函数能够有效捕捉时频分布.
@@ -536,10 +540,10 @@ $$
 ### Feature Matching Loss·特征匹配损失
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
-The feature matching loss is a learned similarity metric measured by the difference in features of the discriminator between a ground truth sample and a generated sample (Larsen et al., 2016, [MelGAN (2019)](2019.10.08_MelGAN.md)).
-As it was successfully adopted to speech synthesis ([MelGAN (2019)](2019.10.08_MelGAN.md)), we use it as an additional loss to train the generator.
+The feature matching loss is a learned similarity metric measured by the difference in features of the discriminator between a ground truth sample and a generated sample (Larsen et al., 2016, [MelGAN (2019)](../Vocoder/2019.10.08_MelGAN.md)).
+As it was successfully adopted to speech synthesis ([MelGAN (2019)](../Vocoder/2019.10.08_MelGAN.md)), we use it as an additional loss to train the generator.
 Every intermediate feature of the discriminator is extracted, and the L1 distance between a ground truth sample and a conditionally generated sample in each feature space is calculated.
 The feature matching loss is defined as
 
@@ -550,6 +554,7 @@ $$
 where $T$ denotes the number of layers in the discriminator; $D_{i}$ and $N_{i}$ denote the features and the number of features in the $i$-th layer of the discriminator, respectively.
 
 </details>
+<br>
 
 特征匹配损失是通过真实样本和生成样本对应的判别器特征的差异来衡量相似度度量.
 由于它在语音合成中的成功, 我们将之作为额外损失来训练生成器.
@@ -577,12 +582,12 @@ def feature_loss(fmap_r, fmap_g):
 ```
 
 </details>
-
+<br>
 
 ### Final Loss·最终损失
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 Our final objectives for the generator and discriminator are as
 
@@ -608,6 +613,7 @@ $$
 where $D_{k}$ denotes the $k$-th sub-discriminator in MPD and MSD.
 
 </details>
+<br>
 
 生成器和判别器的最后目标函数如下:
 
@@ -635,15 +641,15 @@ $$
 
 其中 $D_{k}$ 表示 MPD 和 MSD 中的第 $k$ 个子判别器.
 
-## 3·Experiments·实验
+## 4·Experiments: 实验
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 For fair and reproducible comparison with other models, we used the LJSpeech dataset (Ito, 2017) in which many speech synthesis models are trained.
 LJSpeech consists of 13,100 short audio clips of a single speaker with a total length of approximately 24 hours.
 The audio format is 16-bit PCM with a sample rate of 22 kHz; it was used without any manipulation.
-***HiFi-GAN*** was compared against the best publicly available models: the popular mixture of logistics (MoL) WaveNet ([Parallel WaveNet (2019)](2019.10.25_Parallel_WaveGAN.md)). implementation (Yamamoto, 2018)3 and the official implementation of [WaveGlow (2018)](2018.10.31_WaveGlow.md) and [MelGAN (2019)](2019.10.08_MelGAN.md).
+***HiFi-GAN*** was compared against the best publicly available models: the popular mixture of logistics (MoL) WaveNet ([Parallel WaveNet (2019)](../Vocoder/2019.10.25_Parallel_WaveGAN.md)). implementation (Yamamoto, 2018)3 and the official implementation of [WaveGlow (2018)](../Vocoder/2018.10.31_WaveGlow.md) and [MelGAN (2019)](../Vocoder/2019.10.08_MelGAN.md).
 We used the provided pretrained weights for all the models.
 
 To evaluate the generality of ***HiFi-GAN*** to the mel-spectrogram inversion of unseen speakers, we used the VCTK multi-speaker dataset (Veaux et al., 2017), which consists of approximately 44,200 short audio clips uttered by 109 native English speakers with various accents.
@@ -659,7 +665,7 @@ Raters listened to the test samples randomly, where they were allowed to evaluat
 All audio clips were normalized to prevent the influence of audio volume differences on the raters.
 All quality assessments in Section 4 were conducted in this manner, and were not sourced from other papers.
 
-The synthesis speed was measured on GPU and CPU environments according to the recent research trends regarding the efficiency of neural networks ([MelGAN (2019)](2019.10.08_MelGAN.md), Zhai et al., 2020, Tan et al., 2020).
+The synthesis speed was measured on GPU and CPU environments according to the recent research trends regarding the efficiency of neural networks ([MelGAN (2019)](../Vocoder/2019.10.08_MelGAN.md), Zhai et al., 2020, Tan et al., 2020).
 The devices used are a single NVIDIA V100 GPU and a MacBook Pro laptop (Intel i7 CPU 2.6GHz).
 Additionally, we used 32-bit floating point operations for all the models without any optimization methods.
 
@@ -674,13 +680,14 @@ The networks were trained using the AdamW optimizer (Loshchilov and Hutter, 2017
 The learning rate decay was scheduled by a 0.999 factor in every epoch with an initial learning rate of 2 × 10−4..
 
 </details>
+<br>
 
-## 4·Results·结果
+## 5·Results: 结果
 
 ### 4.1·Audio Quality and Synthesis Speed·音频质量和合成速度
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 To evaluate the performance of our models in terms of both quality and speed, we performed the MOS test for spectrogram inversion, and the speed measurement.
 For the MOS test, we randomly selected 50 utterances from the LJSpeech dataset and used the ground truth spectrograms of the utterances which were excluded from training as input conditions.
@@ -695,11 +702,12 @@ Despite having the lowest MOS among our models, V3 can synthesize speech 13.44 t
 As V3 efficiently synthesizes speech on CPU, it can be well suited for on-device applications..
 
 </details>
+<br>
 
 ### 4.2·Ablation Study·消融实验
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 We performed an ablation study of MPD, MRF, and mel-spectrogram loss to verify the effect of each ***HiFi-GAN*** component on the quality of the synthesized audio.
 V3 that has the smallest expressive power among the three generator variations was used as a generator for the ablation study, and the network parameters were updated up to 500k steps for each configuration.
@@ -717,11 +725,12 @@ We experimented with periods of powers of 2 to verify the effect of periods set 
 While the period 2 allows signals to be processed closely, it results in statistically significant degradation with a difference of 0.20 MOS from the baseline..
 
 </details>
+<br>
 
 ### 4.3·Generalization to Unseen Speakers·泛化到未见说话人
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 We used 50 randomly selected utterances of nine unseen speakers in the VCTK dataset that were excluded from the training set for the MOS test.
 Table 3 shows the experimental results for the mel-spectrogram inversion of the unseen speakers.
@@ -730,17 +739,19 @@ They were all better than AR and flow-based models, indicating that the proposed
 Additionally, the tendency of difference in MOS scores of the proposed models is similar with the result shown in Section 4.1, which exhibits generalization across different datasets..
 
 </details>
+<br>
 
 ### 4.4·End-to-End Speech Synthesis·端到端语音合成
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 We conducted an additional experiment to examine the effectiveness of the proposed models when applied to an end-to-end speech synthesis pipeline, which consists of text to mel-spectrogram and mel spectrogram to waveform synthesis modules.
 We herein used Tacotron2 (Shen et al., 2018) to generate mel-spectrograms from text.
 Without any modification, we synthesized the mel-spectrograms using the most popular implementation of Tacotron2 (Valle, 2018a) with the provided pre-trained weights.
 We then fed them as input conditions into second stage models, including our models and WaveGlow used in Section 4.1.
-(MelGAN and MoL WaveNet were excluded from comparison for their differences in pre-processing such as frequency clipping. Mismatch in the input representation led to producing low quality audio when combined with Tacotron2.)
+(MelGAN and MoL WaveNet were excluded from comparison for their differences in pre-processing such as frequency clipping.
+Mismatch in the input representation led to producing low quality audio when combined with Tacotron2.)
 
 The MOS scores are listed in Table 4.
 The results without fine-tuning show that all the proposed models outperform WaveGlow in the end-to-end setting, while the audio quality of all models are unsatisfactory compared to the ground truth audio.
@@ -750,11 +761,12 @@ MOS scores of all the fine-tuned proposed models over 4, whereas fine-tuned Wave
 We conclude that ***HiFi-GAN*** adapts well on the end-to-end setting with fine-tuning.
 
 </details>
+<br>
 
-## 5·Conclusion·结论
+## 6·Conclusions: 结论
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 In this work, we introduced ***HiFi-GAN***, which can efficiently synthesize high quality speech audio.
 Above all, our proposed model outperforms the best performing publicly available models in terms of synthesis quality, even comparable to human level.
@@ -769,6 +781,7 @@ We release ***HiFi-GAN*** as open source.
 We envisage that our work will serve as a basis for future speech synthesis studies..
 
 </details>
+<br>
 
 本项工作介绍了 ***HiFi-GAN***, 能够高效地合成高质量的语音音频.
 我们的模型在合成质量上超过了最先进的公开模型, 甚至可以与人类水平相当.
