--- a/Models/Vocoder/2022.06.09_BigVGAN.md
+++ b/Models/Vocoder/2022.06.09_BigVGAN.md
@@ -17,7 +17,7 @@
   - [Demo](https://bigvgan-demo.github.io/)
 - 文件:
   - [ArXiv](_PDF/2206.04658v2__BigVGAN__A_Universal_Neural_Vocoder_with_Large-Scale_Training.pdf)
-  - [Publication] #TODO
+  - [Publication](_PDF/2206.04658p0__BigVGAN__ICLR2023Poster.pdf)
 
 </details>
 
