--- a/Models/Vocoder/2024.07.05_FA-GAN.md
+++ b/Models/Vocoder/2024.07.05_FA-GAN.md
@@ -1,8 +1,28 @@
 # FA-GAN
 
-https://arxiv.org/abs/2407.04575
+<details>
+<summary>基本信息</summary>
+
+- 标题: "FA-GAN: Artifacts-free and Phase-aware High-fidelity GAN-based Vocoder"
+- 作者:
+  - 01 Rubing Shen,
+  - 02 Yanzhen Ren,
+  - 03 Zongkun Sun
+- 链接:
+  - [ArXiv](https://arxiv.org/abs/2407.04575)
+  - [Publication](https://doi.org/10.21437/Interspeech.2024-380)
+  - [Github]
+  - [Demo]
+- 文件:
+  - [ArXiv](_PDF/2407.04575v1__FA-GAN__Artifacts-free_and_Phase-aware_High-fidelity_GAN-based_Vocoder.pdf)
+  - [Publication](_PDF/2407.04575p0__FA-GAN__InterSpeech2024.pdf)
+
+</details>
 
 ## Abstract: 摘要
+
+<details>
+<summary>展开原文</summary>
 
 Generative adversarial network (GAN) based vocoders have achieved significant attention in speech synthesis with high quality and fast inference speed.
 However, there still exist many noticeable spectral artifacts, resulting in the quality decline of synthesized speech.
@@ -11,9 +31,24 @@ To suppress the aliasing artifacts caused by non-ideal upsampling layers in high
 To alleviate blurring artifacts and enrich the reconstruction of spectral details, we propose a novel fine-grained multi-resolution real and imaginary loss to assist in the modeling of phase information.
 Experimental results reveal that ***FA-GAN*** outperforms the compared approaches in promoting audio quality and alleviating spectral artifacts, and exhibits superior performance when applied to unseen speaker scenarios.
 
+</details>
+<br>
+
 基于生成对抗网络 (GAN) 的声码器在语音合成中因其高质量和快速推理速度而获得了显著的关注.
 然而, 仍然存在许多明显的频谱伪影, 导致合成语音质量的下降.
 在这项工作中, 我们采用了一种新型的基于 GAN 的声码器, 设计用于减少伪影并提高保真度, 称为 ***FA-GAN***.
 为了抑制由高频分量中的非理想上采样层引起的混叠伪影, 我们在生成器中引入了抗混叠的双重反卷积模块.
 为了减轻模糊伪影并丰富频谱细节的重建, 我们提出了一种新颖的细粒度多分辨率实部和虚部损失, 以辅助相位信息的建模.
 实验结果表明, ***FA-GAN*** 在提升音频质量和减轻频谱伪影方面优于比较的方法, 并且在应用于未见过的说话人场景时表现出优越的性能.
+
+## 1·Introduction: 引言
+
+## 2·Related Works: 相关工作
+
+## 3·Methodology: 方法
+
+## 4·Experiments: 实验
+
+## 5·Results: 结果
+
+## 6·Conclusions: 结论
