--- a/Models/Vocoder/2024.08.14_PeriodWave.md
+++ b/Models/Vocoder/2024.08.14_PeriodWave.md
@@ -3,36 +3,19 @@
 <details>
 <summary>基本信息</summary>
 
-- 标题: PeriodWave: Multi-Period Flow Matching for High-Fidelity Waveform Generation
+- 标题: "PeriodWave: Multi-Period Flow Matching for High-Fidelity Waveform Generation"
 - 作者:
-  - 01 [Sang-Hoon Lee](../../Authors/Sang-Hoon_Lee.md)
-  - 02 [Ha-Yeong Choi](../../Authors/Ha-Yeong_Choi.md)
-  - 03 [Seong-Whan Lee](../../Authors/Seong-Whan_Lee.md)
-- 机构:
-  - 机构
-- 时间:
-  - 预印时间: 2024.08.14 ArXiv v1
-  - 更新笔记: 2024.08.15
-- 发表:
-  - 期刊/会议
+  - 01 Sang-Hoon Lee,
+  - 02 Ha-Yeong Choi,
+  - 03 Seong-Whan Lee
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2408.07547)
-  - [DOI]()
+  - [Publication]
   - [Github](https://github.com/sh-lee-prml/PeriodWave)
   - [Demo](https://periodwave.github.io/demo/)
-  - [Scholar](https://scholar.google.com/scholar?cluster=)
-- 标签:
-  - [开源](../../Tags/OpenSource.md)
-- 页数: 24
-- 引用: ?
-- 被引: ?
-- 数据:
-  - [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md)
-  - [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md)
-- 对比:
-  - ?
-- 复现:
-  - ?
+- 文件:
+  - [ArXiv](_PDF/2408.07547v1__PeriodWave__Multi-Period_Flow_Matching_for_High-Fidelity_Waveform_Generation.pdf)
+  - [Publication] #TODO
 
 </details>
 
@@ -71,12 +54,12 @@ All source code will be available at [Github](https://github.com/sh-lee-prml/Per
 实验结果表明, 我们的模型在语音合成任务和梅尔频谱重建任务方面都优于之前的模型.
 所有源代码将会在 [Github](https://github.com/sh-lee-prml/PeriodWave) 上提供.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
 Deep generative models have achieved significant success in high-fidelity waveform generation.
 In general, the neural waveform generation model which is called \textit{"Neural Vocoder"} transforms a low-resolution acoustic representation such as Mel-spectrogram or linguistic representations into a high-resolution waveform signal for regeneration learning \citep{tan2024regeneration}.
 Conventional neural vocoder models have been investigated for text-to-speech ([WaveNet](2016.09.12_WaveNet.md); \citep{shen2018natural,ren2019fastspeech,kim2020glow,jiang2024megatts} and voice conversion \citep{lee2021voicemixer,choi2021neural}.
-Furthermore, recent universal waveform generation models called \textit{"Universal Vocoder"} are getting more attention due to their various applicability in neural audio codec ([SoundStream](../Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md); [Decsript-Audio-Codec](../Speech_Neural_Codec/2023.06.11_Descript-Audio-Codec.md); ju2024naturalspeech), audio generation \citep{kreuk2023audiogen,roman2023from,yang2023diffsound,huang2023make,pmlr-v202-liu23f}, and zero-shot voice cloning systems \citep{lee2022hierspeech,huang2022generspeech,[VALL-E](../Speech_LLM/2023.01.05_VALL-E.md); li2024styletts,le2024voicebox,kim2024p,shen2024naturalspeech} where models can generate high-fidelity waveform signal from the highly compressed representations beyond the traditional acoustic features, Mel-spectrogram.
+Furthermore, recent universal waveform generation models called \textit{"Universal Vocoder"} are getting more attention due to their various applicability in neural audio codec ([SoundStream](../SpeechCodec/2021.07.07_SoundStream.md); [EnCodec](../SpeechCodec/2022.10.24_EnCodec.md); [Decsript-Audio-Codec](../SpeechCodec/2023.06.11_Descript-Audio-Codec.md); ju2024naturalspeech), audio generation \citep{kreuk2023audiogen,roman2023from,yang2023diffsound,huang2023make,pmlr-v202-liu23f}, and zero-shot voice cloning systems \citep{lee2022hierspeech,huang2022generspeech,[VALL-E](../SpeechLM/2023.01.05_VALL-E.md); li2024styletts,le2024voicebox,kim2024p,shen2024naturalspeech} where models can generate high-fidelity waveform signal from the highly compressed representations beyond the traditional acoustic features, Mel-spectrogram.
 In addition, universal vocoder requires generalization in various out-of-distribution scenarios including unseen voice, instruments, and dynamic environments ([BigVGAN](2022.06.09_BigVGAN.md); bak2023avocodo).
 
 Previously, generative adversarial networks (GAN) models dominated the waveform generation tasks by introducing various discriminators that can capture the different characters of waveform signals.
@@ -117,14 +100,14 @@ The main contributions of this study are as follows:
 To reduce this issue, we adopt the DWT for more accurate frequency-wise vector field estimation and FreeU approach for high-frequency noise reduction.
 - We will release all source code and checkpoints at [Github](https://github.com/sh-lee-prml/PeriodWave).
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
 ### Neural Vocoder
 
 [WaveNet](2016.09.12_WaveNet.md) has successfully paved the way for high-quality neural waveform generation tasks.
 However, these auto-regressive (AR) models suffer from a slow inference speed.
-To address this limitation, teacher-student distillation-based inverse AR flow methods ([Parallel WaveNet](2017.11.28_Parallel_WaveNet.md); [ClariNet](../E2E/2018.07.19_ClariNet.md)) have been investigated for parallel waveform generation.
-Flow-based models ([FloWaveNet](2018.11.06_FloWaveNet.md); [WaveGlow](2018.10.31_WaveGlow.md); [NanoFlow](2020.06.11_NanoFlow.md)) have also been utilized, which can be trained by simply maximizing the likelihood of the data using invertible transformation.
+To address this limitation, teacher-student distillation-based inverse AR flow methods ([Parallel WaveNet](../Vocoder/2017.11.28_Parallel_WaveNet.md_WaveNet.md); [ClariNet](../E2E/2018.07.19_ClariNet.md)) have been investigated for parallel waveform generation.
+Flow-based models ([FloWaveNet](../Vocoder/2018.11.06_FloWaveNet.mdoWaveNet.md); 2018.10.31_WaveGlow.mdWaveGlow.md); 2020.06.11_NanoFlow.mdNanoFlow.md)) have also been utilized, which can be trained by simply maximizing the likelihood of the data using invertible transformation.
 
 ### GAN-based Neural Vocoder
 
@@ -137,7 +120,7 @@ GED \citep{gritsenko2020spectral} proposed a spectral energy distance with uncon
 [BigVGAN](2022.06.09_BigVGAN.md) adopted periodic activation function and anti-aliased representation into the generator for generalization on out-of-distribution samples.
 [Vocos](2023.03.01_Vocos.md) proposed an efficient waveform generation framework using ConvNeXt blocks and iSTFT head without any temporal domain upsampling.
 
-Meanwhile, neural codec models ([SoundStream](../Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md); [Decsript-Audio-Codec](../Speech_Neural_Codec/2023.06.11_Descript-Audio-Codec.md)) and applications ([VALL-E](../Speech_LLM/2023.01.05_VALL-E.md); [UniAudio](../Speech_LLM/2023.10.01_UniAudio.md)) such as TTS and audio generation have been investigated together with the development of neural vocoder.
+Meanwhile, neural codec models ([SoundStream](../SpeechCodec/2021.07.07_SoundStream.md); [EnCodec](../SpeechCodec/2022.10.24_EnCodec.md); [Decsript-Audio-Codec](../SpeechCodec/2023.06.11_Descript-Audio-Codec.md)) and applications ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md); [UniAudio](../SpeechLM/2023.10.01_UniAudio.md)) such as TTS and audio generation have been investigated together with the development of neural vocoder.
 
 ### Diffusion-based Neural Vocoder
 
@@ -147,7 +130,7 @@ Meanwhile, neural codec models ([SoundStream](../Speech_Neural_Codec/2021.07.07_
 Multi-band Diffusion \citep{roman2023from} incorporated multi-band waveform modeling into diffusion models and it significantly improved the performance by band-wise modeling because previous diffusion methods could not model high-frequency information, which only generated the low-frequency representations.
 This model also focused on raw waveform generation from discrete tokens of neural codec model for various audio generation applications including speech, music, and environmental sound.
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
 The flow matching model \citep{lipman2022flow,tong2023conditional} has emerged as an effective strategy for the swift and simulation-free training of continuous normalizing flows (CNFs), producing optimal transport (OT) trajectories that are readily incorporable.
 We are interested in the use of flow matching models for waveform generation to understand their capability to manage complex transformations across waveform distributions.
@@ -260,7 +243,7 @@ $$
 where we found the optimal hyper-parameters through grid search: $\alpha=0.9$ and $\beta=1.1$ at the Table \ref{Table:FreeU}, and this significantly improve the high-frequency modeling performance in terms of spectral distances.
 We also found that scaling up the backbone features could improve the perceptual quality by reducing the noisy sound which is included in ground-truth Mel-spectrogram.
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
 ### Dataset
 
@@ -286,7 +269,7 @@ For the ODE sampling, we utilize Midpoint methods with sampling steps of 16\foot
 Additionally, we compared the ODE methods including Euler, Midpoint, and RK4 methods according to different sampling steps in Appendix \ref{appendix:ode}.
 The experimental details are described in Appendix \ref{appendix:experiment} and \ref{appendix:metrics}.
 
-## 5.Results: 结果
+## 5·Results: 结果
 
 ### 5.1.LJSpeech: High-quality Single Speaker Dataset with 22,050 Hz
 
@@ -396,7 +379,7 @@ The Table \ref{ardit-tts} shows that our model has better performance on the obj
 Furthermore, Our model with FreeU has much better performance than others.
 We can discuss that FreeU could reduce the high-frequency noise resulting in better perceptual quality.
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
 
 In this work, we proposed ***PeriodWave***, a novel universal waveform generation model with conditional flow matching.
 Motivated by the multiple periodic characteristics of high-resolution waveform signals, we introduce the period-aware flow matching estimators which can reflect different implicit periodic representations when estimating vector fields.
