--- a/Models/Vocoder/2024.11.18_ESTVocoder.md
+++ b/Models/Vocoder/2024.11.18_ESTVocoder.md
@@ -12,24 +12,24 @@
   - 05 Zhen-Hua Ling
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2411.11258)
-  - [Publication]() Accepted by NCMMSC2024
-  - [Github]()
-  - [Demo]()
+  - [Publication] Accepted by NCMMSC2024
+  - [Github]
+  - [Demo](https://pb20000090.github.io/NCMMSC2024/)
 - 文件:
-  - [ArXiv]()
+  - [ArXiv](_PDF/2411.11258v1__ESTVocoder__An_Excitation-Spectral-Transformed_Neural_Vocoder_Conditioned_on_Mel_Spectrogram.pdf)
   - [Publication] #TODO
 
 </details>
 
 ## Abstract: 摘要
 
-This paper proposes ESTVocoder, a novel excitation-spectral-transformed neural vocoder within the framework of source-filter theory.
-The ESTVocoder transforms the amplitude and phase spectra of the excitation into the corresponding speech amplitude and phase spectra using a neural filter whose backbone is ConvNeXt v2 blocks.
+This paper proposes ***ESTVocoder***, a novel excitation-spectral-transformed neural vocoder within the framework of source-filter theory.
+The ***ESTVocoder*** transforms the amplitude and phase spectra of the excitation into the corresponding speech amplitude and phase spectra using a neural filter whose backbone is ConvNeXt v2 blocks.
 Finally, the speech waveform is reconstructed through the inverse short-time Fourier transform (ISTFT).
 The excitation is constructed based on the F0: for voiced segments, it contains full harmonic information, while for unvoiced segments, it is represented by noise.
 The excitation provides the filter with prior knowledge of the amplitude and phase patterns, expecting to reduce the modeling difficulty compared to conventional neural vocoders.
-To ensure the fidelity of the synthesized speech, an adversarial training strategy is applied to ESTVocoder with multi-scale and multi-resolution discriminators.
-Analysis-synthesis and text-to-speech experiments both confirm that our proposed ESTVocoder outperforms or is comparable to other baseline neural vocoders, e.g., HiFi-GAN, SiFi-GAN, and Vocos, in terms of synthesized speech quality, with a reasonable model complexity and generation speed.
+To ensure the fidelity of the synthesized speech, an adversarial training strategy is applied to ***ESTVocoder*** with multi-scale and multi-resolution discriminators.
+Analysis-synthesis and text-to-speech experiments both confirm that our proposed ***ESTVocoder*** outperforms or is comparable to other baseline neural vocoders, e.g., HiFi-GAN, SiFi-GAN, and Vocos, in terms of synthesized speech quality, with a reasonable model complexity and generation speed.
 Additional analysis experiments also demonstrate that the introduced excitation effectively accelerates the model's convergence process, thanks to the speech spectral prior information contained in the excitation.
 
 ## 1·Introduction: 引言
@@ -72,16 +72,16 @@ However, their excitations are often constructed based on single F0, lacking har
 In addition, these methods often rely on direct transformation of the excitation waveform, still leaving room for improvements in efficiency and model complexity.
 Excitation-spectral-transformed methods in source-filter-based neural vocoders have not yet been thoroughly investigated.
 
-To achieve high-fidelity speech synthesis as well as efficient training and rapid generation speed, we propose a novel excitation-spectral-transformed neural vocoder called ESTVocoder.
-The ESTVocoder is designed based on the source-filter theory and first produces an excitation according to the F0.
-Compared to the single-F0-based excitation used by SiFi-GAN \cite{yoneyama2023source} and SF-GAN \cite{lu2022source}, the proposed ESTVocoder utilizes a full-harmonic excitation which contains richer spectral information.
+To achieve high-fidelity speech synthesis as well as efficient training and rapid generation speed, we propose a novel excitation-spectral-transformed neural vocoder called ***ESTVocoder***.
+The ***ESTVocoder*** is designed based on the source-filter theory and first produces an excitation according to the F0.
+Compared to the single-F0-based excitation used by SiFi-GAN \cite{yoneyama2023source} and SF-GAN \cite{lu2022source}, the proposed ***ESTVocoder*** utilizes a full-harmonic excitation which contains richer spectral information.
 Subsequently, a neural filter with ConvNeXt v2 blocks \cite{woo2023convnext} as the backbone transforms the amplitude and phase spectra of the excitation into the corresponding amplitude and phase spectra of the speech, conditioned on the mel spectrogram.
 Finally, the speech waveform is reconstructed via ISTFT.
-Both analysis-synthesis and TTS experimental results show that our proposed ESTVocoder outperforms or is comparable to HiFi-GAN, SiFi-GAN, and Vocos, in terms of synthesized speech quality.
-Our proposed ESTVocoder also has an extremely fast training convergence speed, thanks to the introduction of spectral prior information contained in the excitation.
+Both analysis-synthesis and TTS experimental results show that our proposed ***ESTVocoder*** outperforms or is comparable to HiFi-GAN, SiFi-GAN, and Vocos, in terms of synthesized speech quality.
+Our proposed ***ESTVocoder*** also has an extremely fast training convergence speed, thanks to the introduction of spectral prior information contained in the excitation.
 
 This paper is organized as follows:
-In Section \ref{sec:pagestyle}, we provide details on our proposed ESTVocoder.
+In Section \ref{sec:pagestyle}, we provide details on our proposed ***ESTVocoder***.
 In Section \ref{sec:exp}, we present our experimental results.
 Finally, we give conclusions in Section \ref{sec:con}.
 
