--- a/Models/SpeechCodec/2021.07.07_SoundStream.md
+++ b/Models/SpeechCodec/2021.07.07_SoundStream.md
@@ -71,7 +71,7 @@ This can be accomplished either via audio superresolution, i.e., extending the f
 
 Other solutions adopt models based on machine learning as an integral part of the audio codec architecture.
 In these areas, recent advances in text-to-speech (TTS) technology proved to be a key ingredient.
-For example, [WaveNet](../TTS3_Vocoder/2016.09.12_WaveNet.md), a strong generative model originally applied to generate speech from text, was adopted as a decoder in a neural codec [7],[8].
+For example, [WaveNet](../Vocoder/2016.09.12_WaveNet.md), a strong generative model originally applied to generate speech from text, was adopted as a decoder in a neural codec [7],[8].
 Other neural audio codecs adopt different model architectures, e.g., WaveRNN in LPCNet [9] and WaveGRU in Lyra [10], all targeting speech at low bitrates.
 
 In this paper we propose ***SoundStream***, a novel audio codec that can compress speech, music and general audio more efficiently than previous codecs, as illustrated in Fig.01.
@@ -106,14 +106,14 @@ We compare ***SoundStream*** with both Opus and EVS in our subjective evaluation
 
 **Audio Generative Models**:
 Several generative models have been developed for converting text or coded features into audio waveforms.
-[WaveNet (2016)](../TTS3_Vocoder/2016.09.12_WaveNet.md) allows for global and local signal conditioning to synthesize both speech and music.
-[SampleRNN (2016)](../TTS3_Vocoder/2016.12.22_SampleRNN.md) uses recurrent networks in a similar fashion, but it relies on previous samples at different scales.
+[WaveNet (2016)](../Vocoder/2016.09.12_WaveNet.md) allows for global and local signal conditioning to synthesize both speech and music.
+[SampleRNN (2016)](../Vocoder/2016.12.22_SampleRNN.md) uses recurrent networks in a similar fashion, but it relies on previous samples at different scales.
 These auto-regressive models deliver very high-quality audio, at the cost of an increased computational complexity, since samples are generated one by one.
 To overcome this issue, Parallel WaveNet [15] allows for parallel computation, yielding considerable speedup during inference.
 Other approaches involve lightweight and sparse models [16] and networks mimicking the fast Fourier transform as part of the model [9], [17].
 More recently, generative adversarial models have emerged as a solution able to deliver high-quality audio with a lower computational complexity.
-[MelGAN (2019)](../TTS3_Vocoder/2019.10.08_MelGAN.md) is trained to produce audio waveforms when conditioned on mel-spectrograms, training a multi-scale waveform discriminator together with the generator.
-[HiFi-GAN (2020)](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md) takes a similar approach but it applies discriminators to both multiple scales and multiple periods of the audio samples.
+[MelGAN (2019)](../Vocoder/2019.10.08_MelGAN.md) is trained to produce audio waveforms when conditioned on mel-spectrograms, training a multi-scale waveform discriminator together with the generator.
+[HiFi-GAN (2020)](../Vocoder/2020.10.12_HiFi-GAN.md) takes a similar approach but it applies discriminators to both multiple scales and multiple periods of the audio samples.
 The design of the decoder and the losses in ***SoundStream*** is based on this class of audio generative models.
 
 **Audio Enhancement**:
