--- a/Models/SpeechCodec/2024.06.11_Single-Codec.md
+++ b/Models/SpeechCodec/2024.06.11_Single-Codec.md
@@ -77,7 +77,7 @@ It is built on [Vector Quantized-Variational AutoEncoder (VQ-VAE)](../../Modules
 We adopt a [Conformer](../ASR/2020.05.16_Conformer.md)-based encoder to encode a Mel Spectrogram segment seg2 into a latent content representation c, which is then passed to the Vector Quantizer (VQ) for vector quantization.
 The convolution-based decoder reconstructs the Mel Spectrogram ˜seg2 from the quantized content representation c.
 Additionally, we apply a discriminator to improve generation quality ([VQGAN](../_Basis/2020.12.17_VQGAN.md)).
-Finally, we use a neural vocoder [BigVGAN](../../Models/TTS3_Vocoder/2022.06.09_BigVGAN.md) to reconstruct waveform from codec output, i.e., Mel Spectrogram.
+Finally, we use a neural vocoder [BigVGAN](../Vocoder/2022.06.09_BigVGAN.md) to reconstruct waveform from codec output, i.e., Mel Spectrogram.
 
 To achieve a high-quality single-codebook codec, we improve the codec architecture with four modules.
 Specifically, we add a reference encoder to decouple time-invariant information in speech from a Mel Spectrogram segment seg1, yielding a global representation g.
@@ -108,7 +108,7 @@ We found this can improve the efficiency of speech content modelling and make it
 Neural codecs usually employ a sampling module to reduce the sequence length of the discrete representation.
 Currently, the up-sampling and down-sampling operations in codecs are usually implemented by convolution, transposed convolution, or pooling and repeat.
 The sampling process inevitably produces sampling loss, resulting in reduced encoding and decoding capabilities.
-Inspired by [MR-HuBERT](../Speech_Representaion/2023.10.04_MR-HuBERT.md), we introduce an improved hybrid sampling module that uses both convolution and pooling to achieve downsampling and transposed convolution and replication to achieve upsampling.
+Inspired by [MR-HuBERT](../SpeechRepresentation/2023.10.04_MR-HuBERT.md), we introduce an improved hybrid sampling module that uses both convolution and pooling to achieve downsampling and transposed convolution and replication to achieve upsampling.
 The combination of different sampling methods can alleviate sampling distortion.
 
 ### 3.5.Resampling Module: 重采样模块
