--- a/Models/SpeechCodec/2024.09.20_MuCodec.md
+++ b/Models/SpeechCodec/2024.09.20_MuCodec.md
@@ -68,7 +68,7 @@ Therefore, it is essential to consider both semantic and acoustic information; f
 To address these challenges, we propose a [flow-matching-based [23]](../Diffusion/2022.10.06_Flow_Matching.md) music codec ***MuCodec***.
 ***MuCodec*** uses a specialized feature extractor, ***MuEncoder***, based on the two key aspects of music: vocals and background.
 The ***MuEncoder*** features are then discretized using RVQ and employed as conditions for reconstructing Mel-VAE features via flow-matching.
-We reconstruct the Mel spectrogram by passing the Mel-VAE features through a pre-trained Mel-VAE decoder ([AudioLDM [24]](../Diffusion/2023.08.10_AudioLDM2.md)), and ultimately, the music is reconstructed using [HiFi-GAN [25]](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md).
+We reconstruct the Mel spectrogram by passing the Mel-VAE features through a pre-trained Mel-VAE decoder ([AudioLDM [24]](../Diffusion/2023.08.10_AudioLDM2.md)), and ultimately, the music is reconstructed using [HiFi-GAN [25]](../Vocoder/2020.10.12_HiFi-GAN.md).
 Our contributions can be summarized as follows:
 
 - We propose ***MuCodec***, which achieves the lowest bitrate to date while maintaining the highest-quality music reconstruction capabilities.
