--- a/Models/SpeechCodec/2024.09.26_FlowMAC.md
+++ b/Models/SpeechCodec/2024.09.26_FlowMAC.md
@@ -79,7 +79,7 @@ This approach offers a simple training pipeline at much lower inference and trai
 
 In this work, we present the ***Flow Matching Audio Codec (FlowMAC)***, a new audio compression model for low bit rate coding of general audio at $24$ kHz audio based on CFM.
 Our proposed approach learns a mel spectrogram encoder, residual VQ, and decoder via a combination of a simple reconstruction loss and the CFM objective.
-The CFM-based decoder generates realistic mel spectrograms from the discrete latent, which is then converted to waveform domain via an efficient version of [BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md).
+The CFM-based decoder generates realistic mel spectrograms from the discrete latent, which is then converted to waveform domain via an efficient version of [BigVGAN [24]](../Vocoder/2022.06.09_BigVGAN.md).
 The model design is simple and the training pipeline is stable and efficient.
 
 Our contributions can be summarized as follows:
@@ -191,7 +191,7 @@ MSE 和 MAE 损失的和作为输入的梅尔频谱的重构损失.
 <details>
 <summary>展开原文</summary>
 
-The CFM architecture follows [Matcha-TTS [21]](../Diffusion/2023.09.06_Matcha-TTS.md) and uses a U-Net with residual 1D convolutional blocks and transformer blocks with snake beta activations ([BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md)).
+The CFM architecture follows [Matcha-TTS [21]](../Diffusion/2023.09.06_Matcha-TTS.md) and uses a U-Net with residual 1D convolutional blocks and transformer blocks with snake beta activations ([BigVGAN [24]](../Vocoder/2022.06.09_BigVGAN.md)).
 Finally, the output of the U-Net passes through a 1D Block consisting of a 1D convolution, group normalization and a [Mish activation [25]](../../Modules/Activation/2019.08.23_Mish.md), after which a 1$\times$1 convolutional layer creates the final output.
 The corresponding time-step embeddings use a RoPE-Embedding as in [Grad-TTS [26]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md).
 
@@ -211,7 +211,7 @@ In addition, we train our model with a [Classifier-Free Guidance (CFG) [27]](../
 </details>
 <br>
 
-条件流匹配架构遵循 [Matcha-TTS [21]](../Diffusion/2023.09.06_Matcha-TTS.md), 使用残差 1D 卷积块和 Snake Beta 激活的 Transformer 块 ([BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md)).
+条件流匹配架构遵循 [Matcha-TTS [21]](../Diffusion/2023.09.06_Matcha-TTS.md), 使用残差 1D 卷积块和 Snake Beta 激活的 Transformer 块 ([BigVGAN [24]](../Vocoder/2022.06.09_BigVGAN.md)).
 最后, U-Net 的输出经过由一维卷积, 组归一化和 [Mish [25]](../../Modules/Activation/2019.08.23_Mish.md) 激活函数组成的一维模块, 然后通过 $1\times 1$ 卷积层生成最终输出.
 对应的时间步嵌入则和 [Grad-TTS [26]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md) 中相同使用旋转嵌入.
 
@@ -233,7 +233,7 @@ In addition, we train our model with a [Classifier-Free Guidance (CFG) [27]](../
 <details>
 <summary>展开原文</summary>
 
-As mel-to-audio module, we re-train a smaller version of [BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md) on our data: We adapt the mel spectrogram calculation to fit the setting described in Section 3.1.
+As mel-to-audio module, we re-train a smaller version of [BigVGAN [24]](../Vocoder/2022.06.09_BigVGAN.md) on our data: We adapt the mel spectrogram calculation to fit the setting described in Section 3.1.
 Then, we decrease the decoder initial channels to 1024 and use an additional upsampling layer.
 This yields a smaller architecture than the original BigVGAN.
 
@@ -243,7 +243,7 @@ This is saturated by our mel spectrogram codec and our subjective evaluations co
 </details>
 <br>
 
-对于梅尔频谱转音频模块, 我们在我们的数据上重新训练了一个较小的 [BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md) 版本: 我们对梅尔频谱图计算方式进行了适配, 以符合第 3.1 节中描述的设置.
+对于梅尔频谱转音频模块, 我们在我们的数据上重新训练了一个较小的 [BigVGAN [24]](../Vocoder/2022.06.09_BigVGAN.md) 版本: 我们对梅尔频谱图计算方式进行了适配, 以符合第 3.1 节中描述的设置.
 然后, 我们减少解码器的初始通道数为 1024, 并使用额外的上采样层.
 这就产生了一个比原始 BigVGAN 架构更小的架构.
 
@@ -289,7 +289,7 @@ Careful attention needs to be placed on the choice of the CFG factor: values sma
 <details>
 <summary>展开原文</summary>
 
-We train both ***FlowMAC*** and BigVGAN on a combination of the full [LibriTTS [28]](../../Datasets/2019.04.05_LibriTTS.md) clean and dev train subsets as in [BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md) and an internal music database consisting of $640$ hours of high-quality music of various genres.
+We train both ***FlowMAC*** and BigVGAN on a combination of the full [LibriTTS [28]](../../Datasets/2019.04.05_LibriTTS.md) clean and dev train subsets as in [BigVGAN [24]](../Vocoder/2022.06.09_BigVGAN.md) and an internal music database consisting of $640$ hours of high-quality music of various genres.
 The sampling rate for all data points was $24$ kHz.
 
 BigVGAN was trained following the official implementation [Github [29]](https://github.com/NVIDIA/BigVGAN) for 1M iterations on a single A100 GPU.
