--- a/Models/SpeechLM/2024.12.13_CosyVoice2.md
+++ b/Models/SpeechLM/2024.12.13_CosyVoice2.md
@@ -3,7 +3,7 @@
 <details>
 <summary>基本信息</summary>
 
-- 标题: "CosyVoice 2: Scalable Streaming Speech Synthesis with Large Language Models"
+- 标题: "CosyVoice2: Scalable Streaming Speech Synthesis with Large Language Models"
 - 作者:
   - 01 Zhihao Du
   - 02 Yuxuan Wang
@@ -47,7 +47,7 @@ Therefore, in this report, we present an improved streaming speech synthesis mod
 Specifically, we introduce finite-scalar quantization to improve the codebook utilization of speech tokens.
 For the text-speech LM, we streamline the model architecture to allow direct use of a pre-trained LLM as the backbone.
 In addition, we develop a chunk-aware causal flow matching model to support various synthesis scenarios, enabling both streaming and non-streaming synthesis within a single model.
-By training on a large-scale multilingual dataset, CosyVoice 2 achieves human-parity naturalness, minimal response latency, and virtually lossless synthesis quality in the streaming mode.
+By training on a large-scale multilingual dataset, CosyVoice2 achieves human-parity naturalness, minimal response latency, and virtually lossless synthesis quality in the streaming mode.
 We invite readers to listen to the demos at [this https URL](https://funaudiollm.github.io/cosyvoice2).
 
 </details>
@@ -66,6 +66,52 @@ We invite readers to listen to the demos at [this https URL](https://funaudiollm
 通过在大规模多语言数据集上训练, CosyVoice2 在流式模式下实现了人类齐平的自然度, 最小的响应延迟, 几乎无损的合成质量.
 
 ## 1·Introduction: 引言
+
+<details>
+<summary>展开原文</summary>
+
+In recent years, neural text-to-speech (TTS) synthesis models have garnered significant attention for surpassing traditional concatenative and statistical parametric methods \cite{DBLP:conf/interspeech/WangSSWWJYXCBLA17, DBLP:conf/icassp/ShenPWSJYCZWRSA18, DBLP:journals/corr/abs-1710-07654, DBLP:conf/iclr/PingPC19, DBLP:conf/nips/RenRTQZZL19, DBLP:conf/aaai/Li0LZL19, DBLP:conf/iclr/0006H0QZZL21}.
+These models have achieved high fidelity and naturalness on pre-defined specific speakers.
+Recent studies show that zero-shot TTS models are able to synthesize speech for any speaker by imitating the timbre, prosody and style of a reference speech \cite{DBLP:journals/corr/abs-2301-02111}.
+Beyond their in-context learning (ICL) capability, zero-shot TTS models benefit from large-scale training data, achieving synthesis quality and naturalness nearly indistinguishable from human speech.
+
+Recent zero-shot TTS models can be broadly divided into three categories: codec language models, feature diffusion models and their hybrid systems.
+Codec language models utilize a speech codec model to extract discrete speech representation \cite{DBLP:journals/taslp/ZeghidourLOST22,DBLP:journals/tmlr/DefossezCSA23,DBLP:conf/icassp/DuZHZ24} and employ an autoregressive \cite{DBLP:journals/corr/abs-2301-02111,DBLP:journals/tacl/KharitonovVBMGP23,DBLP:journals/corr/abs-2401-07333,DBLP:journals/corr/abs-2401-14321,DBLP:journals/corr/abs-2404-03204,DBLP:journals/corr/abs-2406-05370,DBLP:journals/corr/abs-2406-07855} or masked \cite{DBLP:journals/corr/abs-2409-00750} language model to predict the speech tokens, which are then synthesized to waveforms via codec vocoders \cite{DBLP:conf/asru/OkamotoYOTK23,DBLP:conf/iclr/Siuzdak24}.
+Continuous speech representations are also explored in \cite{DBLP:journals/corr/abs-2407-08551}.
+Language model-based TTS can generate varied and prosody-consistent speech via autoregressive sampling.
+
+Inspired by advances in image generation, denoising diffusion \cite{DBLP:conf/nips/HoJA20,DBLP:conf/iclr/0011SKKEP21} and flow matching models \cite{DBLP:conf/iclr/LipmanCBNL23} have been introduced into non-autoregressive (NAR) speech synthesis.
+Early diffusion-based TTS models required duration prediction for each text (phone) to address the length disparity between text and speech features \cite{DBLP:conf/nips/LeVSKSMWMAMH23,DBLP:conf/icml/JuWS0XYLLST000024,DBLP:conf/icassp/GuoDM0024,DBLP:conf/icassp/MehtaTBSH24}.
+However, this rigid alignment can affect naturalness, resulting in flat prosody.
+To mitigate this issue, cross-attention and Diffusion Transformers (DiT) have been introduced into NAR TTS models \cite{DBLP:conf/asru/GaoMZC23,DBLP:journals/corr/abs-2406-11427}.
+Recent research indicates simpler approaches for text-speech alignment in NAR TTS models, such as E2 TTS \cite{DBLP:journals/corr/abs-2406-18009}, F5-TTS \cite{DBLP:journals/corr/abs-2410-06885} and Seed-TTS \cite{DBLP:journals/corr/abs-2406-02430}.
+In these models, input text is padded with special tokens to match the total speech length which is either automatically predicted by the utterance duration prediction module or specified by the user in advance.
+Since NAR TTS models are not constrained by codec vocoders, they can achieve superior speech quality.
+
+Hybrid systems combine the text-to-codec language model and codec-to-feature diffusion model \cite{DBLP:journals/corr/abs-2406-02430,cosyvoice,DBLP:journals/corr/abs-2409-03283}.
+The language model addresses the alignment between text and speech as well as the utterance duration prediction, while the codec-to-feature diffusion model synthesizes speech features (Mel spectrum) based on the generated codec and other conditions.
+By leveraging the strengths of both generative models, hybrid systems achieve high diversity, prosody consistency and speech quality.
+
+Despite the success of recent zero-shot TTS models, they generally operate in non-streaming (offline) mode, which involves complete input text and requires synthesizing the entire utterance before returning the waveform.
+This results in high latency, negatively impacting user experience in applications like voice chat \cite{hurst2024gpt,DBLP:conf/emnlp/ZhangLZZWZQ23}.
+To address this issue, streaming synthesis has been explored for language model-based zero-shot TTS models \cite{DBLP:journals/corr/abs-2406-02897,DBLP:journals/corr/abs-2410-00767,DBLP:journals/corr/abs-2402-08093,DBLP:conf/icassp/DekelSFHKH24}, but diffusion-based TTS models and hybrid systems lack well-established streaming solutions.
+
+Building on the success of CosyVoice \cite{cosyvoice}, we introduce CosyVoice2, a streaming zero-shot TTS model with improved prosody naturalness, content consistency, and speaker similarity.
+Our contributions include:
+
+- Unifying streaming and non-streaming synthesis in a single framework and proposing the unified text-speech language model and chunk-aware causal flow matching model, leading to lossless streaming synthesis compared to offline mode.
+- Simplifying the LM architecture by removing the text encoder and speaker embedding, allowing pre-trained textual large language models (LLMs) to serve as the backbone, enhancing context understanding.
+- Replacing vector quantization (VQ) in the speech tokenizer with finite scalar quantization (FSQ), improving codebook utilization and capturing more speech information.
+- Upgrading the instructed TTS capacity to support more instructions, including emotion, accent, role style, and fine-grained control.
+In CosyVoice2, the instruction and zero-shot capacity are integrated into a single model, enabling more versatile and vivid synthesis.
+
+Through the above systemic modification and optimization, CosyVoice2 achieves human-parity synthesis quality and is nearly lossless in streaming mode.
+The unified framework loosens deployment requirements, enabling a single model to support both streaming and non-streaming synthesis.
+The upgraded instructed TTS capacity provides a more powerful and  easier approach for users to generate various speeches.
+In addition, the chunk-aware flow matching design can also be applied to NAR TTS models, which suggests the potential for streaming NAR models.
+
+</details>
+<br>
 
 ## 2·Related Works: 相关工作
 
